{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 637,
  "lineage": "6d06d1bf-60c5-c8b8-45c0-15b6dbc498cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00346f5d2d9f92b44",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-167-134-152.compute-1.amazonaws.com",
            "public_ip": "54.167.134.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:819861602579:loadbalancer/mybalancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "mybalancer-1560584067.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "mybalancer",
            "idle_timeout": 400,
            "instances": [
              "i-041cd2d37a4ceea9b",
              "i-08dbff5c6330c11d5"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "mybalancer",
            "security_groups": [
              "sg-092f1b2117f067a8e"
            ],
            "source_security_group": "819861602579/default",
            "source_security_group_id": "sg-092f1b2117f067a8e",
            "subnets": [
              "subnet-09d186e0ca26aaccc",
              "subnet-0eac23415df7c6785"
            ],
            "tags": {
              "Name": "my_balancer"
            },
            "tags_all": {
              "Name": "my_balancer",
              "Owner": "Grandpa"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_instance.nginx2",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.pvpc1",
            "data.aws_ami.ubuntu-18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-08f8e5d6921205d96",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f8e5d6921205d96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d100266cf25c97d3",
            "private_dns": "ip-10-1-1-170.ec2.internal",
            "private_ip": "10.1.1.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:819861602579:key/f02a641b-8c85-46b2-a806-f254637f769a",
                "throughput": 0,
                "volume_id": "vol-01adebe18c47437b3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5daa45ac5e33d6e",
            "tags": {
              "Name": "DB-1",
              "Purpose": "Whiskey DB"
            },
            "tags_all": {
              "Name": "DB-1",
              "Owner": "Grandpa",
              "Purpose": "Whiskey DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084073c9508255545"
            ]
          },
          "dependencies": [
            "aws_security_group.only_egress_for_db",
            "aws_subnet.private_subnet1",
            "aws_vpc.pvpc1",
            "data.aws_ami.ubuntu-18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-0e1b6c1bfecda1361",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1b6c1bfecda1361",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00038df8d24751778",
            "private_dns": "ip-10-1-2-221.ec2.internal",
            "private_ip": "10.1.2.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:819861602579:key/f02a641b-8c85-46b2-a806-f254637f769a",
                "throughput": 0,
                "volume_id": "vol-00456441034b22fa0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b31c0065f91d1d97",
            "tags": {
              "Name": "DB-2",
              "Purpose": "Whiskey DB"
            },
            "tags_all": {
              "Name": "DB-2",
              "Owner": "Grandpa",
              "Purpose": "Whiskey DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084073c9508255545"
            ]
          },
          "dependencies": [
            "aws_security_group.only_egress_for_db",
            "aws_subnet.private_subnet2",
            "aws_vpc.pvpc1",
            "data.aws_ami.ubuntu-18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-041cd2d37a4ceea9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041cd2d37a4ceea9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FirstKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-059ea7078e7d1292a",
            "private_dns": "ip-10-1-254-182.ec2.internal",
            "private_ip": "10.1.254.182",
            "public_dns": "ec2-3-87-0-121.compute-1.amazonaws.com",
            "public_ip": "3.87.0.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:819861602579:key/f02a641b-8c85-46b2-a806-f254637f769a",
                "throughput": 0,
                "volume_id": "vol-04dd5c2ba1690feed",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eac23415df7c6785",
            "tags": {
              "Name": "Nginx-1",
              "Purpose": "Whiskey",
              "Server_Name": "Whiskey-1"
            },
            "tags_all": {
              "Name": "Nginx-1",
              "Owner": "Grandpa",
              "Purpose": "Whiskey",
              "Server_Name": "Whiskey-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026112b512da67dd4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet1",
            "aws_vpc.pvpc1",
            "data.aws_ami.ubuntu-18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:819861602579:instance/i-08dbff5c6330c11d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dbff5c6330c11d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FirstKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0290301d0e1c27c65",
            "private_dns": "ip-10-1-253-145.ec2.internal",
            "private_ip": "10.1.253.145",
            "public_dns": "ec2-54-90-105-112.compute-1.amazonaws.com",
            "public_ip": "54.90.105.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:819861602579:key/f02a641b-8c85-46b2-a806-f254637f769a",
                "throughput": 0,
                "volume_id": "vol-06931e66abf3f164b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d186e0ca26aaccc",
            "tags": {
              "Name": "Nginx-2",
              "Purpose": "Whiskey",
              "Server_Name": "Whiskey-2"
            },
            "tags_all": {
              "Name": "Nginx-2",
              "Owner": "Grandpa",
              "Purpose": "Whiskey",
              "Server_Name": "Whiskey-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026112b512da67dd4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet2",
            "aws_vpc.pvpc1",
            "data.aws_ami.ubuntu-18"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:internet-gateway/igw-03537a292257eb256",
            "id": "igw-03537a292257eb256",
            "owner_id": "819861602579",
            "tags": {
              "Name": "igw1"
            },
            "tags_all": {
              "Name": "igw1",
              "Owner": "Grandpa"
            },
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00346f5d2d9f92b44",
            "connectivity_type": "public",
            "id": "nat-02e4c63d799bc377d",
            "network_interface_id": "eni-0c771acea5336bb18",
            "private_ip": "10.1.254.9",
            "public_ip": "54.167.134.152",
            "subnet_id": "subnet-0eac23415df7c6785",
            "tags": {
              "Name": "gw NAT for DB"
            },
            "tags_all": {
              "Name": "gw NAT for DB",
              "Owner": "Grandpa"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.ig1",
            "aws_subnet.public_subnet1",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-060e445ba07cbe1881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02e4c63d799bc377d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-060e445ba07cbe188",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.ig1",
            "aws_nat_gateway.my_nat",
            "aws_route_table.private1",
            "aws_subnet.public_subnet1",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05c109803e76ba1ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02e4c63d799bc377d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c109803e76ba1ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.ig1",
            "aws_nat_gateway.my_nat",
            "aws_route_table.private2",
            "aws_subnet.public_subnet1",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03537a292257eb256",
            "id": "r-rtb-06f36c00246f40f3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f36c00246f40f3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig1",
            "aws_route_table.public1",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03537a292257eb256",
            "id": "r-rtb-0e28f84c7a01480731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e28f84c7a0148073",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig1",
            "aws_route_table.public2",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-060e445ba07cbe188",
            "id": "rtb-060e445ba07cbe188",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table1"
            },
            "tags_all": {
              "Name": "private-route-table1",
              "Owner": "Grandpa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-05c109803e76ba1ac",
            "id": "rtb-05c109803e76ba1ac",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table2"
            },
            "tags_all": {
              "Name": "private-route-table2",
              "Owner": "Grandpa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-06f36c00246f40f3c",
            "id": "rtb-06f36c00246f40f3c",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table1"
            },
            "tags_all": {
              "Name": "public-route-table1",
              "Owner": "Grandpa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-0e28f84c7a0148073",
            "id": "rtb-0e28f84c7a0148073",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table2"
            },
            "tags_all": {
              "Name": "public-route-table2",
              "Owner": "Grandpa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0789cad31e92f33bc",
            "route_table_id": "rtb-060e445ba07cbe188",
            "subnet_id": "subnet-0a5daa45ac5e33d6e"
          },
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private_subnet1",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08437c58fa9a8163b",
            "route_table_id": "rtb-05c109803e76ba1ac",
            "subnet_id": "subnet-0b31c0065f91d1d97"
          },
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private_subnet2",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063ce083831e9c5ff",
            "route_table_id": "rtb-06f36c00246f40f3c",
            "subnet_id": "subnet-0eac23415df7c6785"
          },
          "dependencies": [
            "aws_route_table.public1",
            "aws_subnet.public_subnet1",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0985269b68a5fa3db",
            "route_table_id": "rtb-0e28f84c7a0148073",
            "subnet_id": "subnet-09d186e0ca26aaccc"
          },
          "dependencies": [
            "aws_route_table.public2",
            "aws_subnet.public_subnet2",
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:security-group/sg-026112b512da67dd4",
            "description": "Allow ports for nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026112b512da67dd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx1 web",
            "name_prefix": "",
            "owner_id": "819861602579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_allow_ssh"
            },
            "tags_all": {
              "Name": "security_group_allow_ssh",
              "Owner": "Grandpa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "only_egress_for_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:security-group/sg-084073c9508255545",
            "description": "egress for db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084073c9508255545",
            "ingress": [],
            "name": "db egress",
            "name_prefix": "",
            "owner_id": "819861602579",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "only_egress_for_db"
            },
            "tags_all": {
              "Name": "only_egress_for_db",
              "Owner": "Grandpa"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0a5daa45ac5e33d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0a5daa45ac5e33d6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819861602579",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Name": "private_subnet1",
              "Owner": "Grandpa"
            },
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0b31c0065f91d1d97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0b31c0065f91d1d97",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819861602579",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2",
              "Owner": "Grandpa"
            },
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0eac23415df7c6785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.254.0/24",
            "id": "subnet-0eac23415df7c6785",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819861602579",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1",
              "Owner": "Grandpa"
            },
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-09d186e0ca26aaccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.253.0/24",
            "id": "subnet-09d186e0ca26aaccc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819861602579",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Name": "public_subnet2",
              "Owner": "Grandpa"
            },
            "vpc_id": "vpc-01e6870e6544c6f63"
          },
          "dependencies": [
            "aws_vpc.pvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:vpc/vpc-01e6870e6544c6f63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ee94089a599c9926",
            "default_route_table_id": "rtb-07a5ecd9eb497fc1b",
            "default_security_group_id": "sg-092f1b2117f067a8e",
            "dhcp_options_id": "dopt-0f5ce1ef3ad924b66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e6870e6544c6f63",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07a5ecd9eb497fc1b",
            "owner_id": "819861602579",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc",
              "Owner": "Grandpa"
            }
          }
        }
      ]
    }
  ]
}